# adaptive-surface

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: device-capability-runtime.md  gaze-attention.md
docs/architecture/: backend-contracts.md  capability-registry.md  control-plane.md  delegation-lifecycle.md  design-system.md  frontend-surface-runtime.md  model-intent-routing.md  motion-and-stability.md  objective-session-engine.md  security-pack.md  (+7 more)
scripts/: create-dmg.sh  security-pack-vendor.mjs  security-pack-verify-vendor.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: deepseek.rs  lib.rs  local_files.rs  main.rs
src-tauri/src/apple/: applescript.rs  calendar.rs  contacts.rs  mail.rs  mod.rs  models.rs  notes.rs  permissions.rs  reminders.rs
src-tauri/src/control_plane/: authorization.rs  contracts.rs  data_guard.rs  engine.rs  executors.rs  journal.rs  mod.rs  policy.rs  publisher.rs  repository.rs  scheduler.rs  service.rs
src-tauri/src/desktop_control/: macos.rs  mod.rs  unsupported.rs
src-tauri/src/native_helpers/: contacts_bridge.m  eventkit_bridge.m
src-tauri/src/providers/: calendar_provider.rs  contacts_bridge.rs  contacts_provider.rs  eventkit_bridge.rs  mail_provider.rs  mod.rs  notes_provider.rs  provider_status.rs  reminders_provider.rs
(+227 files in other folders)
