[package]
name = "adaptive-surface"
version = "0.1.0"
description = "Adaptive Surface macOS-first Tauri desktop application"
authors = ["Adaptive Surface"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "adaptive_surface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
